Show the scroll bar and overflow correctly for really wide tables

--- a/app/assets/stylesheets/grok_admin/default.scss
+++ b/app/assets/stylesheets/grok_admin/default.scss
@@ -74,6 +74,19 @@ body {
     }
   }
 
+  .accordion .item .content {
+    overflow: scroll;
+    ::-webkit-scrollbar {
+      -webkit-appearance: none;
+      width: 7px;
+    }
+    ::-webkit-scrollbar-thumb {
+      border-radius: 4px;
+      background-color: rgba(0,0,0,.5);
+      -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+    }
+  }
+
   // The error on the top of forms put there by devise
   #error_explanation,
   div.field.errors {
